--- a/浅野紹介/浅野紹介.html
+++ b/浅野紹介/浅野紹介.html
@@ -9,15 +9,20 @@
 <div class="wrapper">
 		<header class="header">
 				<h1>浅野君の紹介</h1>
+				<img src = "image/peace.jpeg" alt="">
 		</header>
 		<main>
 				<section class="container">
+				<hr>
+				<table border="0" cellpadding="10" cellspacing="0">
 						<p class="message-item">年齢:19歳<br>
 						得意教科:インフラ（一番マシ）<br>
 						好きな食べ物:海鮮丼<br>
 						趣味:ドラクエ<br>
 						就職活動の方針:サービスエンジニアに惹かれてるのでそっち方面で頑張る<br>
 						</p>
+				</table>
+				<hr>
 						<p class="message-item">ほかの人のページ
 						</p>
 					<nav>
