内川紹介更新（浅野）_ver2

--- a/内川紹介/内川紹介.html
+++ b/内川紹介/内川紹介.html
@@ -24,7 +24,7 @@
 	<p>就職活動の方針:今のところ事務職を目指す 💻</p>
 	
 	<h2>班員からのコメント</h2>
-	<p>浅野：<br>
+	<p>浅野：君も…ドラクエ大好きっ子にならないか？()<br>
 		平岡：頑張ってや。<br>
 		荒木：<br>
 		諏訪：</p>
