--- a/荒木紹介/荒木紹介.html
+++ b/荒木紹介/荒木紹介.html
@@ -7,6 +7,12 @@
 </head>
 <body>
     
+    <style>
+        a {
+          color: red;
+        }
+    </style>
+
     <p>荒木の紹介ページ（作成者：浅野）</p>
 
     <div class="bun_1">
@@ -26,7 +32,7 @@
     </div>
 
     <div class="kome_1">
-        <p>
+        <p class = "kome_syousai_1">
         班員からのコメント：<br>
         浅野：いつの間にか話すようになってましたね！<br>
         諏訪：<br>
@@ -38,10 +44,10 @@
     <div class = "sonohoka_1">
         <p>
         その他の班員一覧<br><br><br>
-        <a href="file:///C:/Users/H.Asano/Documents/%E9%96%8B%E7%99%BA%E6%8A%80%E8%A1%93_%E3%83%81%E3%83%BC%E3%83%A0%E9%96%8B%E7%99%BA%EF%BC%95%E7%8F%AD/%E6%B5%85%E9%87%8E%E7%B4%B9%E4%BB%8B/%E6%B5%85%E9%87%8E%E7%B4%B9%E4%BB%8B.html">浅野</a><br>
-        <a href="file:///C:/Users/H.Asano/Documents/%E9%96%8B%E7%99%BA%E6%8A%80%E8%A1%93_%E3%83%81%E3%83%BC%E3%83%A0%E9%96%8B%E7%99%BA%EF%BC%95%E7%8F%AD/%E8%AB%8F%E8%A8%AA%E7%B4%B9%E4%BB%8B/%E8%AB%8F%E8%A8%AA%E7%B4%B9%E4%BB%8B.html">諏訪</a><br>
-        <a href="file:///C:/Users/H.Asano/Documents/%E9%96%8B%E7%99%BA%E6%8A%80%E8%A1%93_%E3%83%81%E3%83%BC%E3%83%A0%E9%96%8B%E7%99%BA%EF%BC%95%E7%8F%AD/%E5%B9%B3%E5%B2%A1%E7%B4%B9%E4%BB%8B/%E5%B9%B3%E5%B2%A1%E7%B4%B9%E4%BB%8B.html">平岡</a><br>
-        <a href="file:///C:/Users/H.Asano/Documents/%E9%96%8B%E7%99%BA%E6%8A%80%E8%A1%93_%E3%83%81%E3%83%BC%E3%83%A0%E9%96%8B%E7%99%BA%EF%BC%95%E7%8F%AD/%E5%86%85%E5%B7%9D%E7%B4%B9%E4%BB%8B/%E5%86%85%E5%B7%9D%E7%B4%B9%E4%BB%8B.html">内川</a><br>
+        <a class = "sonohoka_syousai_1" class="link" href="file:///C:/Users/H.Asano/Documents/%E9%96%8B%E7%99%BA%E6%8A%80%E8%A1%93_%E3%83%81%E3%83%BC%E3%83%A0%E9%96%8B%E7%99%BA%EF%BC%95%E7%8F%AD/%E6%B5%85%E9%87%8E%E7%B4%B9%E4%BB%8B/%E6%B5%85%E9%87%8E%E7%B4%B9%E4%BB%8B.html">浅野</a><br>
+        <a class = "sonohoka_syousai_1" class="link" href="file:///C:/Users/H.Asano/Documents/%E9%96%8B%E7%99%BA%E6%8A%80%E8%A1%93_%E3%83%81%E3%83%BC%E3%83%A0%E9%96%8B%E7%99%BA%EF%BC%95%E7%8F%AD/%E8%AB%8F%E8%A8%AA%E7%B4%B9%E4%BB%8B/%E8%AB%8F%E8%A8%AA%E7%B4%B9%E4%BB%8B.html">諏訪</a><br>
+        <a class = "sonohoka_syousai_1" class="link" href="file:///C:/Users/H.Asano/Documents/%E9%96%8B%E7%99%BA%E6%8A%80%E8%A1%93_%E3%83%81%E3%83%BC%E3%83%A0%E9%96%8B%E7%99%BA%EF%BC%95%E7%8F%AD/%E5%B9%B3%E5%B2%A1%E7%B4%B9%E4%BB%8B/%E5%B9%B3%E5%B2%A1%E7%B4%B9%E4%BB%8B.html">平岡</a><br>
+        <a class = "sonohoka_syousai_1" class="link" href="file:///C:/Users/H.Asano/Documents/%E9%96%8B%E7%99%BA%E6%8A%80%E8%A1%93_%E3%83%81%E3%83%BC%E3%83%A0%E9%96%8B%E7%99%BA%EF%BC%95%E7%8F%AD/%E5%86%85%E5%B7%9D%E7%B4%B9%E4%BB%8B/%E5%86%85%E5%B7%9D%E7%B4%B9%E4%BB%8B.html">内川</a><br>
         </p>
     </div>
 
@@ -51,4 +57,5 @@
         </p>
     </div>
 </body>
+  
 </html>
