平岡紹介微修正_ver2.1

--- a/平岡紹介/平岡紹介.html
+++ b/平岡紹介/平岡紹介.html
@@ -70,10 +70,10 @@
     <p class="message-item">ほかの人のページ</p>
     <nav>
       <ul>
-        <li><a href="../ホーム/荒木紹介.html">荒木</a></li>
-        <li><a href="../ホーム/内川紹介.html">内川</a></li>
-        <li><a href="../ホーム/浅野紹介.html">浅野</a></li>
-        <li><a href="../ホーム/諏訪紹介.html">諏訪</a></li>
+        <li><a href="../荒木紹介/荒木紹介.html">荒木</a></li>
+        <li><a href="../内川紹介/内川紹介.html">内川</a></li>
+        <li><a href="../浅野紹介/浅野紹介.html">浅野</a></li>
+        <li><a href="../諏訪紹介/諏訪紹介.html">諏訪</a></li>
         <br>
         <li><a href="../ホーム/ホーム.html">ホーム</a></li>
       </ul>
