--- a/浅野紹介/浅野紹介.html
+++ b/浅野紹介/浅野紹介.html
@@ -27,11 +27,11 @@
 						</p>
 					<nav>
 							<ul>
-									<li><a href="荒木紹介.html">荒木君</a></li>
-									<li><a href="内川紹介.html">内川君</a></li>
-									<li><a href="平岡紹介.html">平岡君</a></li>
-									<li><a href="諏訪紹介.html">諏訪君</a></li><br>
-									<li><a href="ホーム.html">ホーム</a></li>
+									<li><a href="../荒木紹介/荒木紹介.html">荒木君</a></li>
+									<li><a href="../内川紹介/内川紹介.html">内川君</a></li>
+									<li><a href="../平岡紹介/平岡紹介.html">平岡君</a></li>
+									<li><a href="../諏訪紹介/諏訪紹介.html">諏訪君</a></li><br>
+									<li><a href="../ホーム/ホーム.html">ホーム</a></li>
 							</ul>
 					</nav>
 				</section>
