--- a/荒木紹介/荒木紹介.html
+++ b/荒木紹介/荒木紹介.html
@@ -132,7 +132,7 @@ function toggleImageVisibility() {
 
     <div class = "home_1">
         <p class="homesize_1">
-            <a href="file:///C:/Users/H.Asano/Documents/%E9%96%8B%E7%99%BA%E6%8A%80%E8%A1%93_%E3%83%81%E3%83%BC%E3%83%A0%E9%96%8B%E7%99%BA%EF%BC%95%E7%8F%AD/%E3%83%9B%E3%83%BC%E3%83%A0/%E3%83%9B%E3%83%BC%E3%83%A0.html">Topへ戻る</a>
+            <a href="../ホーム/ホーム.html">Topへ戻る</a>
         </p>
     </div>
 </body>
