--- a/荒木紹介/荒木紹介.html
+++ b/荒木紹介/荒木紹介.html
@@ -115,7 +115,7 @@ function toggleImageVisibility() {
         班員からのコメント：<br>
         浅野：いつの間にか話すようになってましたね！<br>
         諏訪：<br>
-        平岡：<br>
+        平岡：画像送信遅くてすまんかった。<br>
         内川：<br>
         </p>
     </div>
