内川紹介更新(荒木)_ver2

--- a/内川紹介/内川紹介.html
+++ b/内川紹介/内川紹介.html
@@ -26,7 +26,7 @@
 	<h2>班員からのコメント</h2>
 	<p>浅野：君も…ドラクエ大好きっ子にならないか？()<br>
 		平岡：頑張ってや。<br>
-		荒木：<br>
+		荒木：fight～<br>
 		諏訪：</p>
 	
 	<h3>その他の班員一覧<h3>
