平岡紹介用ファイル（浅野コメント）_ver2

--- a/平岡紹介/平岡紹介.html
+++ b/平岡紹介/平岡紹介.html
@@ -62,7 +62,7 @@
     <div class="comment-container">
       <p class="comment">班員のコメント</p>
       <p class="comment">荒木：画像これでええんかｗ</p>
-      <p class="comment">浅野：</p>
+      <p class="comment">浅野：あんま話したこと無いけど印象は強い、画像が</p>
       <p class="comment">内川：</p>
       <p class="comment">諏訪：</p>
     </div>
