--- a/浅野紹介/浅野紹介.html
+++ b/浅野紹介/浅野紹介.html
@@ -9,7 +9,10 @@
 <div class="wrapper">
 		<header class="header">
 				<h1>浅野君の紹介</h1>
-				<img src = "image/peace.jpeg" alt="">
+	<input type="button" value=" 表示 " onclick="document.getElementById('xyz').style.display = 'inline';">
+	<input type="button" value="非表示" onclick="document.getElementById('xyz').style.display = 'none';">
+	<br>
+	<img src="image/peace.jpeg" alt="" id="xyz" width="400">
 		</header>
 		<main>
 				<section class="container">
