--- a/荒木紹介/荒木紹介.html
+++ b/荒木紹介/荒木紹介.html
@@ -114,7 +114,7 @@ function toggleImageVisibility() {
         <p class = "kome_syousai_1">
         班員からのコメント：<br>
         浅野：いつの間にか話すようになってましたね！<br>
-        諏訪：<br>
+        諏訪：あんま話したことないけどたまに目合っておぉってなるよね<br>
         平岡：画像送信遅くてすまんかった。<br>
         内川：<br>
         </p>
