コメント追加　諏訪

--- a/浅野紹介/浅野紹介.html
+++ b/浅野紹介/浅野紹介.html
@@ -27,7 +27,7 @@
 						<p class="message-item">班員からのメッセージ<br><br>
 						荒木:<br>
 						平岡:<br>
-						諏訪:<br>
+						諏訪:楽器吹きたいから中学校行こう<br>
 						内川:<br>
 						</p>
 						
