コメント追加　諏訪

--- a/内川紹介/内川紹介.html
+++ b/内川紹介/内川紹介.html
@@ -27,7 +27,7 @@
 	<p>浅野：君も…ドラクエ大好きっ子にならないか？()<br>
 		平岡：頑張ってや。<br>
 		荒木：fight～<br>
-		諏訪：</p>
+		諏訪：将棋強くなりたいけど勉強しようとは思わない</p>
 	
 	<h3>その他の班員一覧<h3>
 	<table border="1" width="300" height="50">
