--- a/浅野紹介/浅野紹介.html
+++ b/浅野紹介/浅野紹介.html
@@ -25,7 +25,7 @@
 						就職活動の方針:サービスエンジニアに惹かれてるのでそっち方面で頑張る<br><br>
 						</p>
 						<p class="message-item">班員からのメッセージ<br><br>
-						荒木:<br>
+						荒木:ドラクエ11s買ってくれ<br>
 						平岡:<br>
 						諏訪:楽器吹きたいから中学校行こう<br>
 						内川:<br>
