--- a/ホーム/ホーム.html
+++ b/ホーム/ホーム.html
@@ -111,6 +111,9 @@
   <button onclick="showAlerts()">アラートを表示</button>
 </body>
 
+<button onclick="switchBackground()">背景色を切り替える</button>
+</body>
+
 <p>おみくじコーナー</p>
 <input type="button" value="おみくじを引く" onclick="drawFortune();"></input>
 <div id="omikuzi"></div>
