--- a/平岡紹介/平岡紹介.html
+++ b/平岡紹介/平岡紹介.html
@@ -32,6 +32,14 @@
     font-family: Arial, sans-serif;
     font-weight: bold; /* Added font-weight to make the comments bold */
   }
+  .message-item {
+    background-color: black; /* Added background color */
+    color: white; /* Added text color */
+    padding: 10px;
+    border-radius: 5px;
+    margin-bottom: 10px;
+    font-family: Arial, sans-serif;
+  }
 </style>
 <script>
   function toggleImage() {
@@ -75,7 +83,7 @@
         <li><a href="../浅野紹介/浅野紹介.html">浅野</a></li>
         <li><a href="../諏訪紹介/諏訪紹介.html">諏訪</a></li>
         <br>
-        <li><a href="../ホーム/ホーム.html">ホーム</a></li>
+        <li><a href="../ホーム/ホーム.html">TOPへ戻る</a></li>
       </ul>
     </nav>
   </main>
