--- a/諏訪紹介/諏訪紹介.html
+++ b/諏訪紹介/諏訪紹介.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>諏訪晴希さんのの自己紹介</title>
-<body background="C:\Users\内川雄也\OneDrive\ドキュメント\Team5\諏訪紹介\images\simplescreenrecorder-2019-03-13_16.11.39.gif">
+<body background="images\simplescreenrecorder-2019-03-13_16.11.39.gif">
 
 </body>
 
@@ -18,21 +18,21 @@
 
 <h1>好きな趣味 ゲーム (ヴァロラント)<h1>
 
-<img src="C:\Users\内川雄也\OneDrive\ドキュメント\Team5\諏訪紹介\images\thum2161-1.webp"" id="xyz" width="400">
+<img src="images\thum2161-1.webp"" id="xyz" width="400">
 
 <h1>好きな食べ物 パスタ<h1>
 
-<img src="C:\Users\内川雄也\OneDrive\ドキュメント\Team5\諏訪紹介\images\pOOSoQJ8FZb4xXCDDOeNpX9NGPhtacY4H76P05he.webp"" id="xyz" width="400">
+<img src="images\pOOSoQJ8FZb4xXCDDOeNpX9NGPhtacY4H76P05he.webp"" id="xyz" width="400">
 
 <h1>好きな科目 java<h1>
 
-<img src="C:\Users\内川雄也\OneDrive\ドキュメント\Team5\諏訪紹介\images\c294df4e-3f9a-42cb-8cba-b25497d78936_java_logo.avif"" id="xyz" width="400">
+<img src="images\c294df4e-3f9a-42cb-8cba-b25497d78936_java_logo.avif"" id="xyz" width="400">
 
 <h3>その他の班員一覧<h3>
 
 <h2>班員からのコメント</h2>
 	<p>内川：これからも仲よくしよう！<br>
-		平岡：<br>
+		平岡：このクラス諏訪が二人おるから名前だけでわからんのよな。<br>
 		荒木：<br>
 		浅野：</p>
 		
