--- a/荒木紹介/荒木紹介.html
+++ b/荒木紹介/荒木紹介.html
@@ -116,7 +116,7 @@ function toggleImageVisibility() {
         浅野：いつの間にか話すようになってましたね！<br>
         諏訪：あんま話したことないけどたまに目合っておぉってなるよね<br>
         平岡：画像送信遅くてすまんかった。<br>
-        内川：<br>
+        内川：話したことがないけどまた今度何かあればよろしく<br>
         </p>
     </div>
 
