--- a/平岡紹介/平岡紹介.html
+++ b/平岡紹介/平岡紹介.html
@@ -63,7 +63,7 @@
       <p class="comment">班員のコメント</p>
       <p class="comment">荒木：画像これでええんかｗ</p>
       <p class="comment">浅野：あんま話したこと無いけど印象は強い、画像が</p>
-      <p class="comment">内川：</p>
+      <p class="comment">内川：今回はどうも色々とありがとう</p>
       <p class="comment">諏訪：PHPの感想一回書かなくていい権利先生忘れてないよね</p>
     </div>
 
