--- a/浅野紹介/浅野紹介.html
+++ b/浅野紹介/浅野紹介.html
@@ -28,7 +28,7 @@
 						荒木:ドラクエ11s買ってくれ<br>
 						平岡:ドラクエモンスターズの最新作出るらしいですね。<br>
 						諏訪:楽器吹きたいから中学校行こう<br>
-						内川:<br>
+						内川:実は僕もドラクエ少しだけしてました<br>
 						</p>
 						
 				</table>
