コメント追加荒木

--- a/諏訪紹介/諏訪紹介.html
+++ b/諏訪紹介/諏訪紹介.html
@@ -33,7 +33,7 @@
 <h2>班員からのコメント</h2>
 	<p>内川：これからも仲よくしよう！<br>
 		平岡：このクラス諏訪が二人おるから名前だけでわからんのよな。<br>
-		荒木：<br>
+		荒木：あんま話したことないから話したいね～<br>
 		浅野：</p>
 		
 
