--- a/荒木紹介/荒木紹介.html
+++ b/荒木紹介/荒木紹介.html
@@ -119,7 +119,7 @@ function toggleImageVisibility() {
         内川：<br>
         </p>
     </div>
-
+<div class = "douga_1">
     <div class = "sonohoka_1">
         <p>
         その他の班員一覧<br><br><br>
@@ -128,13 +128,22 @@ function toggleImageVisibility() {
         <a class = "sonohoka_syousai_1" class="link" href="../平岡紹介/平岡紹介.html">平岡</a><br>
         <a class = "sonohoka_syousai_1" class="link" href="../内川紹介/内川紹介.html">内川</a><br>
         </p>
+
     </div>
 
+    <div class = "area1">
+      <iframe class = "Douga1" width="1150%" height="108%" src="https://www.youtube.com/embed/SaJkao9ZLBM?autoplay=1&mute=1&playlist=SaJkao9ZLBM&loop=1&controls=0" title="ドラクエ10 オープニング DRAGON QUEST ONLINE OP（Ver1～Ver4) ドラゴンクエスト10オンライン ネタバレ注意" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+</div>
     <div class = "home_1">
         <p class="homesize_1">
             <a href="../ホーム/ホーム.html">Topへ戻る</a>
         </p>
     </div>
+
+    <footer id="footer">
+      <p class = "hutter_1"><b>引用元:https://www.youtube.com/embed/SaJkao9ZLBM?autoplay=1&mute=1&playlist=SaJkao9ZLBM&loop=1&controls=0 </b></p>
+  </footer>
 </body>
   
 </html>
