ホーム修正_ver3

--- a/ホーム/ホーム.html
+++ b/ホーム/ホーム.html
@@ -117,11 +117,8 @@
         body.classList.add("red-bg");
       }
     }
-  </script>
 
-  <button onclick="switchBackground()">背景色を切り替える</button
-
-  //浅野のカウントボタンここから
+    //浅野のカウントボタンここから
     var count = 0;
 
   function incrementCount() {
@@ -134,8 +131,10 @@
     document.getElementById("countDisplay").textContent = count;
   }
   //浅野のカウントダウンボタンここまで
-
   </script>
+
+  <button onclick="switchBackground()">背景色を切り替える</button>
+
 </head>
 <body>
   <label for="inputText">数を入力してください：</label>
