--- a/諏訪紹介/諏訪紹介.html
+++ b/諏訪紹介/諏訪紹介.html
@@ -8,25 +8,26 @@
 </body>
 
 <h1>諏訪晴希さんの紹介ページ（作成者 内川雄也)<h1>
-
 </tr>
 	</table>
 <p>画像切り替えボタン</p>
 	<input type="button" value=" 表示 " onclick="document.getElementById('xyz').style.display = 'inline';">
 	<input type="button" value="非表示" onclick="document.getElementById('xyz').style.display = 'none';">
 	<br>
+<img src="C:\Users\内川雄也\OneDrive\ドキュメント\Team5\諏訪紹介\images\unnamed.jpg"" id="xyz" width="400">
 
-<h1>好きな趣味 ゲーム (ヴァロラント)<h1>
+<h1>好きな趣味 ヴァロラント(ゲーム)<h1>
 
-<img src="images\thum2161-1.webp"" id="xyz" width="400">
+<img src="C:\Users\内川雄也\OneDrive\ドキュメント\Team5\諏訪紹介\images\thum2161-1.webp"" id="xyz" width="400">
 
 <h1>好きな食べ物 パスタ<h1>
 
-<img src="images\pOOSoQJ8FZb4xXCDDOeNpX9NGPhtacY4H76P05he.webp"" id="xyz" width="400">
+<img src="C:\Users\内川雄也\OneDrive\ドキュメント\Team5\諏訪紹介\images\pOOSoQJ8FZb4xXCDDOeNpX9NGPhtacY4H76P05he.webp"" id="xyz" width="400">
+
 
 <h1>好きな科目 java<h1>
 
-<img src="images\c294df4e-3f9a-42cb-8cba-b25497d78936_java_logo.avif"" id="xyz" width="400">
+<img src="C:\Users\内川雄也\OneDrive\ドキュメント\Team5\諏訪紹介\images\c294df4e-3f9a-42cb-8cba-b25497d78936_java_logo.avif"" id="xyz" width="400">
 
 <h3>その他の班員一覧<h3>
 
