indexファイル化による大幅変更_ver1

--- a/内川紹介/内川紹介.html
+++ b/内川紹介/内川紹介.html
@@ -39,6 +39,6 @@
           <th><a href="../諏訪紹介/諏訪紹介.html">諏訪</a></th>
         </tr>
       </table>
-      <footer> <a href="../ホーム/ホーム.html">TOPへ戻る</a> </footer>
+      <footer> <a href="../index.html">TOPへ戻る</a> </footer>
 </body>
 </html>
