--- a/荒木紹介/荒木紹介.html
+++ b/荒木紹介/荒木紹介.html
@@ -137,7 +137,7 @@ function toggleImageVisibility() {
 </div>
     <div class = "home_1">
         <p class="homesize_1">
-            <a href="../ホーム/ホーム.html">Topへ戻る</a>
+            <a href="../index.html">Topへ戻る</a>
         </p>
     </div>
 
