--- a/平岡紹介/平岡紹介.html
+++ b/平岡紹介/平岡紹介.html
@@ -83,7 +83,7 @@
         <li><a href="../浅野紹介/浅野紹介.html">浅野</a></li>
         <li><a href="../諏訪紹介/諏訪紹介.html">諏訪</a></li>
         <br>
-        <li><a href="../ホーム/ホーム.html">TOPへ戻る</a></li>
+        <li><a href="../index.html">TOPへ戻る</a></li>
       </ul>
     </nav>
   </main>
