--- a/index.html
+++ b/index.html
@@ -21,23 +21,23 @@
   <h2>班員一覧</h2>
 
   <div class="member">
-    <h2><a href="../浅野紹介/浅野紹介.html">浅野</a></h2>
+    <h2><a href="浅野紹介/浅野紹介.html">浅野</a></h2>
   </div>
 
   <div class="member">
-    <h2><a href="../諏訪紹介/諏訪紹介.html">諏訪</a></h2>
+    <h2><a href="諏訪紹介.html">諏訪</a></h2>
   </div>
 
   <div class="member">
-    <h2><a href="../荒木紹介/荒木紹介.html">荒木</a></h2>
+    <h2><a href="荒木紹介.html">荒木</a></h2>
   </div>
 
   <div class="member">
-    <h2><a href="../平岡紹介/平岡紹介.html">平岡</a></h2>
+    <h2><a href="平岡紹介.html">平岡</a></h2>
   </div>
 
   <div class="member">
-    <h2><a href="../内川紹介/内川紹介.html">内川</a></h2>
+    <h2><a href="内川紹介.html">内川</a></h2>
   </div>
 
   <!-- 追加のメンバー情報をここに追加 -->
