ndex化大幅変更_ver3

--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
   </div>
 
   <div class="member">
-    <h2><a href="諏訪紹介.html">諏訪</a></h2>
+    <h2><a href="諏訪紹介/諏訪紹介.html">諏訪</a></h2>
   </div>
 
   <div class="member">
-    <h2><a href="荒木紹介.html">荒木</a></h2>
+    <h2><a href="荒木紹介/荒木紹介.html">荒木</a></h2>
   </div>
 
   <div class="member">
-    <h2><a href="平岡紹介.html">平岡</a></h2>
+    <h2><a href="平岡紹介/平岡紹介.html">平岡</a></h2>
   </div>
 
   <div class="member">
-    <h2><a href="内川紹介.html">内川</a></h2>
+    <h2><a href="内川紹介/内川紹介.html">内川</a></h2>
   </div>
 
   <!-- 追加のメンバー情報をここに追加 -->
