諏訪紹介ページにて画像が表示さて礼なかった為修正_3

--- a/諏訪紹介/諏訪紹介.html
+++ b/諏訪紹介/諏訪紹介.html
@@ -14,20 +14,20 @@
 	<input type="button" value=" 表示 " onclick="document.getElementById('xyz').style.display = 'inline';">
 	<input type="button" value="非表示" onclick="document.getElementById('xyz').style.display = 'none';">
 	<br>
-<img src="C:\Users\内川雄也\OneDrive\ドキュメント\Team5\諏訪紹介\images\unnamed.jpg" id="xyz" width="400">
+<img src="images\unnamed.jpg" id="xyz" width="400">
 
 <h1>好きな趣味 ヴァロラント(ゲーム)<h1>
 
-<img src="C:\Users\内川雄也\OneDrive\ドキュメント\Team5\諏訪紹介\images\thum2161-1.webp" id="xyz" width="400">
+<img src="images\thum2161-1.webp" id="xyz" width="400">
 
 <h1>好きな食べ物 パスタ<h1>
 
-<img src="C:\Users\内川雄也\OneDrive\ドキュメント\Team5\諏訪紹介\images\pOOSoQJ8FZb4xXCDDOeNpX9NGPhtacY4H76P05he.webp" id="xyz" width="400">
+<img src="images\pOOSoQJ8FZb4xXCDDOeNpX9NGPhtacY4H76P05he.webp" id="xyz" width="400">
 
 
 <h1>好きな科目 java<h1>
 
-<img src="C:\Users\内川雄也\OneDrive\ドキュメント\Team5\諏訪紹介\images\c294df4e-3f9a-42cb-8cba-b25497d78936_java_logo.avif" id="xyz" width="400">
+<img src="images/c294df4e-3f9a-42cb-8cba-b25497d78936_java_logo.avif" id="xyz" width="400">
 
 <h3>その他の班員一覧<h3>
 
